Add title property in Cards an Carousel Component in themeclean-flex

--- a/fragments/cards/template.html
+++ b/fragments/cards/template.html
@@ -1,5 +1,6 @@
+<div>
+  <center><h2>Head title</h2></center>
 <div class="flex flex-wrap -mx-3">
-
   <div class="card my-3 px-0 md:px-3">
     <div class="flex flex-col h-full">
       <div class="self-center">
@@ -19,4 +20,5 @@
     </div>
   </div>
 
+</div>
 </div>
